--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav-container">
             <div class="logo">Silpa</div>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#about" class="nav-link">Abouts</a></li>
                 <li><a href="#tech-stack" class="nav-link">Tech Stack</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#achievements" class="nav-link">Achievements</a></li>
@@ -240,4 +240,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
