--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
         <nav class="nav-container">
             <div class="logo">Silpa</div>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="#about" class="nav-link">Abouts</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#tech-stack" class="nav-link">Tech Stack</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#achievements" class="nav-link">Achievements</a></li>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Get In Touch</a>
-                    <a href="resumeKodnest.pdf" class="btn btn-secondary"  download>Download Resume</a>
+                    <a href="resumeKodnest.pdf" class="btn btn-secondary" id="resumeBtn" download>Download Resume</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -240,5 +240,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
